@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-08-01T08:09:18Z",
-  "count_outdated" : 1353,
-  "uniques_outdated" : 325,
+  "timestamp" : "2023-08-02T16:08:36Z",
+  "count_outdated" : 1367,
+  "uniques_outdated" : 327,
   "count" : 1398,
   "uniques" : 337,
   "views" : [
-    {
-      "timestamp": "2023-07-19T00:00:00Z",
-      "count": 14,
-      "count_minmax": [ 12, 14 ],
-      "count_decinc": [ 0, 14 ],
-      "uniques": 2,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 0, 2 ]
-    },
     {
       "timestamp": "2023-07-22T00:00:00Z",
       "count": 2,
