@@ -1,12 +1,7 @@
 {
-  "count": 45,
-  "uniques": 12,
+  "count": 31,
+  "uniques": 10,
   "views": [
-    {
-      "timestamp": "2023-07-19T00:00:00Z",
-      "count": 14,
-      "uniques": 2
-    },
     {
       "timestamp": "2023-07-22T00:00:00Z",
       "count": 2,
