@@ -1,3 +1,12 @@
+2023-08-02T16:08:36Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5741185604 # 1781
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-02
+* notice: last 14d: unq all: 10 31
+* notice: prev accum: outdated-unq outdated-all / unq all: 325 1353 / 337 1398
+* notice: next accum: outdated-unq outdated-all / unq all: 327 1367 / 337 1398
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2023-07-19] / []
+
 2023-08-01T08:09:18Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5724243811 # 1777
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-01
